test-data/elab/implicit-arg/unify-plicity-mismatch.snapshot
exit status: 0

stdout = """
#error : forall(_ : Int) -> Int

"""

stderr = """
error: Type mismatch: expected `forall(_ : Int) -> Int`, found `Int`
  ┌─ test-data/elab/implicit-arg/unify-plicity-mismatch.pion:3:9
  │
3 │ #check (f : (Int -> Int));
  │         ^

error: Could not infer implicit argument `x`
  ┌─ test-data/elab/implicit-arg/unify-plicity-mismatch.pion:3:9
  │
3 │ #check (f : (Int -> Int));
  │         ^


"""
